Refactor: 광고 활성 후보 조회 효율 개선