@@ -16,18 +16,16 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.data.domain.Pageable;
 
 import java.time.Clock;
 import java.time.Instant;
 import java.time.LocalDateTime;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -58,17 +56,15 @@ class AdServiceTest {
     void getAd_success() {
         String placement = "HEADER";
         Ad ad = buildActiveAd(placement, FIXED_NOW.plusDays(1));
-        when(adRepository.countActiveByPlacement(eq(placement), eq(FIXED_NOW))).thenReturn(1L);
-        when(adRepository.findActiveByPlacement(eq(placement), eq(FIXED_NOW), any(Pageable.class)))
-                .thenReturn(Collections.singletonList(ad));
+        when(adRepository.findActiveIdsByPlacement(placement, FIXED_NOW)).thenReturn(List.of(1L));
+        when(adRepository.findActiveById(1L, FIXED_NOW)).thenReturn(Optional.of(ad));
 
         Ad result = adService.getAd(placement);
 
         assertThat(result).isSameAs(ad);
         assertThat(ad.getImpressionCount()).isZero();
-        verify(adRepository).countActiveByPlacement(placement, FIXED_NOW);
-        Pageable pageable = captureAdCandidatePageable();
-        assertThat(pageable.getPageSize()).isEqualTo(1);
+        verify(adRepository).findActiveIdsByPlacement(placement, FIXED_NOW);
+        verify(adRepository).findActiveById(1L, FIXED_NOW);
     }
 
     @Test
@@ -76,48 +72,61 @@ class AdServiceTest {
     void getAd_includesOpenEndedAd() {
         String placement = "HEADER";
         Ad ad = buildActiveAd(placement, null);
-        when(adRepository.countActiveByPlacement(eq(placement), eq(FIXED_NOW))).thenReturn(1L);
-        when(adRepository.findActiveByPlacement(eq(placement), eq(FIXED_NOW), any(Pageable.class)))
-                .thenReturn(Collections.singletonList(ad));
+        when(adRepository.findActiveIdsByPlacement(placement, FIXED_NOW)).thenReturn(List.of(1L));
+        when(adRepository.findActiveById(1L, FIXED_NOW)).thenReturn(Optional.of(ad));
 
         Ad result = adService.getAd(placement);
 
         assertThat(result).isSameAs(ad);
-        verify(adRepository).countActiveByPlacement(placement, FIXED_NOW);
-        Pageable pageable = captureAdCandidatePageable();
-        assertThat(pageable.getPageSize()).isEqualTo(1);
+        verify(adRepository).findActiveIdsByPlacement(placement, FIXED_NOW);
+        verify(adRepository).findActiveById(1L, FIXED_NOW);
     }
 
     @Test
     @DisplayName("활성 광고가 없으면 후보 조회 없이 null을 반환한다")
     void getAd_noActiveAds_returnsNull() {
-        when(adRepository.countActiveByPlacement("HEADER", FIXED_NOW)).thenReturn(0L);
+        when(adRepository.findActiveIdsByPlacement("HEADER", FIXED_NOW)).thenReturn(List.of());
 
         Ad result = adService.getAd("HEADER");
 
         assertThat(result).isNull();
-        verify(adRepository).countActiveByPlacement("HEADER", FIXED_NOW);
-        verify(adRepository, never()).findActiveByPlacement(any(), any(), any(Pageable.class));
+        verify(adRepository).findActiveIdsByPlacement("HEADER", FIXED_NOW);
+        verify(adRepository, never()).findActiveById(any(), any());
     }
 
     @Test
-    @DisplayName("랜덤 offset 후보가 사라지면 첫 후보를 다시 조회한다")
-    void getAd_fallsBackToFirstCandidateWhenRandomOffsetWindowIsEmpty() {
+    @DisplayName("ID projection 후보가 재검증에서 모두 제외되면 null을 반환한다")
+    void getAd_returnsNullWhenProjectedIdsAreNoLongerActive() {
         String placement = "HEADER";
-        Ad ad = buildActiveAd(placement, null);
-        when(adRepository.countActiveByPlacement(eq(placement), eq(FIXED_NOW))).thenReturn(2L);
-        when(adRepository.findActiveByPlacement(eq(placement), eq(FIXED_NOW), any(Pageable.class)))
-                .thenReturn(Collections.emptyList())
-                .thenReturn(Collections.singletonList(ad));
+        when(adRepository.findActiveIdsByPlacement(placement, FIXED_NOW))
+                .thenReturn(List.of(1L))
+                .thenReturn(List.of());
+        when(adRepository.findActiveById(1L, FIXED_NOW)).thenReturn(Optional.empty());
 
         Ad result = adService.getAd(placement);
 
-        assertThat(result).isSameAs(ad);
-        ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
-        verify(adRepository, times(2))
-                .findActiveByPlacement(eq(placement), eq(FIXED_NOW), pageableCaptor.capture());
-        assertThat(pageableCaptor.getAllValues()).extracting(Pageable::getPageSize).containsOnly(1);
-        assertThat(pageableCaptor.getAllValues().get(1).getPageNumber()).isZero();
+        assertThat(result).isNull();
+        verify(adRepository, times(2)).findActiveIdsByPlacement(placement, FIXED_NOW);
+        verify(adRepository).findActiveById(1L, FIXED_NOW);
+    }
+
+    @Test
+    @DisplayName("ID projection 후보가 사라지면 활성 ID를 다시 조회한다")
+    void getAd_reloadsActiveIdsWhenProjectedIdsAreNoLongerActive() {
+        String placement = "HEADER";
+        Ad refreshedAd = buildActiveAd(placement, null);
+        when(adRepository.findActiveIdsByPlacement(placement, FIXED_NOW))
+                .thenReturn(List.of(1L))
+                .thenReturn(List.of(2L));
+        when(adRepository.findActiveById(1L, FIXED_NOW)).thenReturn(Optional.empty());
+        when(adRepository.findActiveById(2L, FIXED_NOW)).thenReturn(Optional.of(refreshedAd));
+
+        Ad result = adService.getAd(placement);
+
+        assertThat(result).isSameAs(refreshedAd);
+        verify(adRepository, times(2)).findActiveIdsByPlacement(placement, FIXED_NOW);
+        verify(adRepository).findActiveById(1L, FIXED_NOW);
+        verify(adRepository).findActiveById(2L, FIXED_NOW);
     }
 
     @Test
@@ -278,9 +287,4 @@ class AdServiceTest {
                 .build();
     }
 
-    private Pageable captureAdCandidatePageable() {
-        ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
-        verify(adRepository).findActiveByPlacement(any(), eq(FIXED_NOW), pageableCaptor.capture());
-        return pageableCaptor.getValue();
-    }
 }
